<resources>
    <string name="app_name">mysettings</string>
    <string name="home_itv_set">ITV业务设置</string>
    <string name="home_net_detection">网络检测</string>
    <string name="home_screen_set">屏幕设置</string>
    <string name="home_scheme_set">风格选择</string>
    <string name="home_net_set">网络设置</string>
    <string name="home_app_manager">应用管理</string>
    <string name="home_more">更多设置</string>
    <string name="home_device_info">关于本机</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="password_dialog_title">请输入密码</string>
    <string name="app_manager_storage">内部存储：</string>
    <string name="app_manage_storage_total">总计</string>
    <string name="app_manage_storage_avaliable">可用空间</string>
    <string name="app_manage_had_Download">已经下载的应用</string>
    <string name="app_info">应用信息</string>
    <string name="app_info_sum">总计</string>
    <string name="btn_clear_data">清除数据</string>
    <string name="btn_clear_cache">清除缓存</string>
    <string name="btn_uninstall">卸载</string>
    <string name="app_info_cache">缓存</string>
    <string name="app_info_data">数据</string>
    <string name="app_info_application">应用</string>
    <string name="stbModel">机顶盒型号：</string>
    <string name="softwareId">软件版本号：</string>
    <string name="settings_id">设置版本：</string>
    <string name="serialNum">序列号：</string>
    <string name="mac">MAC地址：</string>
    <string name="net_id">网络帐号:</string>
    <string name="service_id">业务帐号：</string>
    <string name="service_group">业务分组：</string>
    <string name="IPTVauthURL">主认证地址：</string>
    <string name="upgrade_url">升级地址：</string>
    <string name="manufacture_name">厂家名称：</string>
    <string name="launcher_version">Launcher版本:</string>
    <string name="wireConnect">有线连接</string>
    <string name="otherConnectMode">其他方式</string>
    <string name="has_connected_net">已连接网络：</string>
    <string name="dia_net">拨号进行上网</string>
    <string name="dial_mode">拨号模式</string>
    <string name="dhcp_mode">DHCP/路由模式</string>
    <string name="static_mode">静态IP模式</string>
</resources>
