<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_itv_set"
            style="@style/HomeButtonStyle"
            android:text="@string/home_itv_set" />

        <Button
            android:id="@+id/home_net_detection"
            style="@style/HomeButtonStyle"
            android:text="@string/home_net_detection" />

        <Button
            android:id="@+id/home_screen_set"
            style="@style/HomeButtonStyle"
            android:text="@string/home_screen_set" />

        <Button
            android:id="@+id/home_scheme_set"
            style="@style/HomeButtonStyle"
            android:text="@string/home_scheme_set" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_net_set"
            style="@style/HomeButtonStyle"
            android:text="@string/home_net_set" />

        <Button
            android:id="@+id/home_app_manager"
            style="@style/HomeButtonStyle"
            android:text="@string/home_app_manager" />

        <Button
            android:id="@+id/home_more"
            style="@style/HomeButtonStyle"
            android:text="@string/home_more" />

        <Button
            android:id="@+id/home_device_info"
            style="@style/HomeButtonStyle"
            android:text="@string/home_device_info" />
    </LinearLayout>

</LinearLayout>