<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.DeviceInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/stbModel" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_stb_modle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/softwareId" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_software_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/settings_id" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_settings_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/serialNum" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_serial_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mac" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/net_id" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_net_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/service_id" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_service_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/service_group" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_service_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/IPTVauthURL" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_authUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/upgrade_url" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_upgrade_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/manufacture_name" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_manufacture_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DevinfoStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/launcher_version" />

        <TextView
            style="@style/DevinfoStyle"
            android:id="@+id/id_launcher_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TY1208-Z" />
    </LinearLayout>

</LinearLayout>