<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_info"
        android:textSize="@android:dimen/app_icon_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:layout_marginLeft="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_appinfo_detail_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/item_appinfo_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@id/item_appinfo_detail_icon"
                android:text="Test" />

            <TextView
                android:id="@+id/item_appinfo_detail_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_appinfo_detail_label"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/item_appinfo_detail_icon"
                android:text="4.5 MB" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/app_info_sum" />

            <TextView
                android:id="@+id/app_info_detail_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="3.49MB" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/app_info_application" />

            <TextView
                android:id="@+id/app_info_detail_application"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="3.49MB" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/app_info_data" />

            <TextView
                android:id="@+id/app_info_detail_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="3.49MB" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/app_info_cache" />

            <TextView
                android:id="@+id/app_info_detail_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="3.49MB" />
        </RelativeLayout>
    </LinearLayout>


    <View
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_clear_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear_data" />

        <Button
            android:id="@+id/btn_clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear_cache" />

        <Button
            android:id="@+id/btn_uninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_uninstall" />
    </LinearLayout>
</LinearLayout>
